--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=FileSystem
-spring.datasource.url=jdbc:mysql://localhost:3306/filesystem
-spring.datasource.username=filesystemManager
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
 #spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
